--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.llollox:androidtoggleswitch:2.0.1'
+    implementation 'es.voghdev.pdfviewpager:library:1.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
